# pomodoro-timer

./: CMakeLists.txt  LICENSE  README.de.md  README.md
src/: MainFrame.cpp  MainFrame.hpp  PomodoroCanvas.cpp  PomodoroCanvas.hpp  Task.cpp  Task.hpp  Timer.cpp  Timer.hpp  app.cpp  app.hpp
tests/: test_task.cpp  test_timer.cpp
